# image-cipher-comparison

./: README.md
ImageCipherComparison/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
ImageCipherComparison/app/src/androidTest/java/at/fhjoanneum/platzerf/imageciphercomparison/: ExampleInstrumentedTest.java
ImageCipherComparison/app/src/main/: AndroidManifest.xml
ImageCipherComparison/app/src/main/cpp/: imagecipher1 - Kopie (2).c  imagecipher1 - Kopie - Kopie.c  imagecipher1 - Kopie - Kopie.h  imagecipher1 - Kopie.c  imagecipher1 - Kopie.h  imagecipher1.c  imagecipher1.h  imagecipher2.c  imagecipher2.h  native-lib-aes.cpp  native-lib-cipher2.cpp  native-lib-gmp.cpp  native-lib.cpp
ImageCipherComparison/app/src/main/cpp/package/double/: imagecipher1.c  imagecipher1.h  imagecipher2.c  imagecipher2.h
ImageCipherComparison/app/src/main/cpp/package/gmp/: imagecipher1.c  imagecipher1.h  imagecipher2.c  imagecipher2.h
ImageCipherComparison/app/src/main/cpp/tinyaes/: main.c
ImageCipherComparison/app/src/main/cpp/tinyaes2/: aes.h
ImageCipherComparison/app/src/main/java/at/fhjoanneum/platzerf/imageciphercomparison/: AesCCipher.java  AesJavaCipher.java  CipherProviderTests.java  CipherResult.java  Constants.java  ConvertedImage.java  CsvLogger.java  Function.java  ImageCipher.java  ImageCipher1.java  ImageCipher1Gmp.java  ImageCipher2.java  ImageCipher2Gmp.java  ImageCipher2Java.java  ImageConverter.java  MainActivity.java  Output.java  SimpleFileLogger.java  TestConfig.java  TestRunner.java  WaitTester.java  Writer.java
ImageCipherComparison/app/src/main/res/layout/: activity_main.xml
ImageCipherComparison/app/src/main/res/values/: strings.xml
ImageCipherComparison/app/src/test/java/at/fhjoanneum/platzerf/imageciphercomparison/: ExampleUnitTest.java
ImageCipherComparison/gradle/wrapper/: gradle-wrapper.properties
measurements/SamsungNote1/: 1024image 4.1V 4Cipher Encrypt.csv  1024image 4.1V 4Cipher Encrypt.hdmm  1024image.csv  1024image.hdmm  512Lenna 1h 4.1V alle Cipher.csv  512Lenna 1h 4.1V alle Cipher.hdmm  512lenna 45min.csv  512lenna 45min.hdmm  csv-log-2000-01-01-01.04.04.585.csv  csv-log-2000-01-01-01.04.24.383.csv  csv-log-2000-01-01-01.06.50.928.csv  csv-log-2000-01-01-03.24.25.727.csv  csv-log-2000-01-01-04.52.51.846.csv  csv-log-2017-06-22-07.03.39.774.csv  csv-log-2017-06-22-15.56.50.327.csv  csv-log-2017-06-22-16.07.34.948.csv  csv-log-2017-06-22-16.21.46.040.csv  csv-log-2017-06-22-16.28.11.661.csv  csv-log-2017-06-22-16.30.59.495.csv  csv-log-2017-06-27-11.46.44.753.csv  csv-log-2017-06-27-11.54.00.506.csv  csv-log-2017-06-27-11.58.35.413.csv  csv-log-2017-06-27-12.16.48.113.csv  csv-log-2017-06-27-12.20.25.820.csv  csv-log-2017-06-27-12.26.15.339.csv  csv-log-2017-06-27-15.12.49.473.csv  csv-log-2017-06-27-16.02.08.429.csv  csv-log-2017-06-27-16.11.54.111.csv  csv-log-2017-09-23-15.30.44.643.csv  csv-log-2018-09-30-09.13.24.004.csv  hjh.hdmm  pretest.csv  pretest.hdmm
measurements/SamsungS5mini/files/: processes-from-adb-shell-ps.txt  processes.txt
